--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
     </div>
 
-<!-- Menu Button  -->
+<!-- menu  -->
     <div class="menu">
         <div class="Menu-content">
             <h1>Menu</h1>
@@ -98,10 +98,10 @@
     </div>
     <hr>
 
-    <!-- menu layer  -->
+    <!-- menu layers There are 6 layers  -->
 <div class="container3">
     <div class="layer">
-        <div class="layer-conent">
+        <div class="layer-content">
         <h3>Starters</h3>
         <hr>              
         <ul>
@@ -116,7 +116,7 @@
         </div>
     </div>
     <div class="layer">
-        <div class="layer-conent">
+        <div class="layer-content">
             <h3>South Indian</h3>
                 <hr>
                 <ul>
@@ -131,8 +131,8 @@
         </div>
     </div>
 
-    <div class="layer">
-        <div class="layer-conent">
+    <div class="layers">
+        <div class="layer-content">
             <h3>Indian Kitchen</h3>
                 <hr>
                 <ul>
@@ -147,8 +147,8 @@
         </div>
     </div>
 
-    <div class="layer">
-        <div class="layer-conent">
+    <div class="layers">
+        <div class="layer-content">
             <h3>Rice & Salad</h3>
                 <hr>
                 <ul>
@@ -163,8 +163,8 @@
         </div>
     </div>
 
-    <div class="layer">
-        <div class="layer-conent">
+    <div class="layers">
+        <div class="layer-content">
             <h3>Tandoori Bread</h3>
                 <hr>
                 <ul>
@@ -180,7 +180,7 @@
     </div>
 
     <div class="layer Large-layer">
-        <div class="layer-conent " >
+        <div class="layer-content " >
             <h3>Bevereges and Other</h3>
                 <hr>
                 <ul>
