--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <!-- menu layers There are 6 layers  -->
 <div class="container3">
-    <div class="layer">
+    <div class="layers">
         <div class="layer-content">
         <h3>Starters</h3>
         <hr>              
@@ -115,7 +115,7 @@
         </ul>
         </div>
     </div>
-    <div class="layer">
+    <div class="layers">
         <div class="layer-content">
             <h3>South Indian</h3>
                 <hr>
@@ -179,7 +179,7 @@
         </div>
     </div>
 
-    <div class="layer Large-layer">
+    <div class="layers Large-layer">
         <div class="layer-content " >
             <h3>Bevereges and Other</h3>
                 <hr>
